Version 3.11 beta, release Notes

Incompatibilities with beta versions before 3023:

  * Tool box change:
    Only the F1 script is now assigned by default. 
    To load the others script see http://www.ap-i.net/skychart/en/documentation/toolbox

  * If you have developed your own script: 
    The script file format as changed in version 3.11-3023. You must save your own scripts to file again because the support for the old format will be removed before the stable version release.
    Also the script code is no more saved in skychart.ini. In case of problem you can use the backup copy with the .oldscript extension that is done the first time you run this version.  

New functions:

  * New performance options from menu File/Reset chart and options...
  * New tool box function you can activate with the keys F1 to F8.
  * Scripting functions and custom tool box capabilities.
  * The tool bar editor allow you to edit the button bar layout. The function is available from the menu Setup / Tool bar editor.
  * New representation for the Milky Way. This can be activated from the menu Setup / Display / Lines by unchecking "Milky Way - Line mode".
  * Option to add a crosshair to the chart center.
  * Option to add the meridian line with any projection.
  * Add Tcp/Ip connection to the LX200 telescope interface.
  * Show comet and asteroid hourly motion in the detail window.

Corrections:

  * No more store the program data location in the configuration file. If you need a non-standard location use the new command line option "--datadir=".